# lotshot-autoplay

./: .gitignore  .gitmodules  LICENSE  README.md  README.ru.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.ts
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: main.rs
