[package]
name = "lotshot-autoplay"
version = "1.0.0"
description = "Automated lottery player for Lotshot on TON blockchain"
authors = ["kdev-code"]
license = "MIT"
repository = "https://github.com/kdev-code/lotshot-autoplay"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lotshot_autoplay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
